@@ -1,5 +1,3 @@
-final def SPRING_BOOT_VERSION = '1.5.22.RELEASE'
-
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
@@ -7,22 +5,13 @@ repositories {
 
 dependencies {
     api project(':client:java-armeria')
-    api 'javax.validation:validation-api'
-    api('org.springframework.boot:spring-boot-starter') {
-        version {
-            // Will fail the build if the override doesn't work
-            strictly SPRING_BOOT_VERSION
-        }
-    }
+    api libs.javax.validation
+    api libs.spring.boot1.autoconfigure
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        version {
-            // Will fail the build if the override doesn't work
-            strictly SPRING_BOOT_VERSION
-        }
-    }
-    testImplementation 'com.github.sbrannen:spring-test-junit5:1.5.0'
-    testRuntimeOnly 'org.hibernate.validator:hibernate-validator'
+    testImplementation libs.spring.boot1.starter
+    testImplementation libs.spring.boot1.starter.test
+    testImplementation libs.spring.test.junit5
+    testRuntimeOnly libs.hibernate.validator
 }
 
 // Use the sources from 'client-spring-boot-autoconfigure'.
@@ -41,4 +30,11 @@ tasks.javadoc.source "${autoconfigureProjectDir}/src/main/java"
 // Disable checkstyle because it's checked by 'client-spring-boot-autoconfigure'
 tasks.withType(Checkstyle) {
     onlyIf { false }
+}
+
+// allows illegal access by cglib
+if (rootProject.ext.testJavaVersion >= 16) {
+    tasks.withType(Test) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
 }
